# python-tehtavat

koodi/viikko1/nhl-statistics-1/src/: index.py  player_reader.py
koodi/viikko2/varasto/: .pylintrc
koodi/viikko6/query-language/src/: index.py  matchers.py
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko2/project-reader/: pyproject.toml
viikko2/test-project/: pyproject.toml
viikko3/web-login/src/tests/: resource.robot
viikko5/int-joukko/src/: int_joukko.py
viikko6/query-language/src/: index.py
