[tool.poetry]
name = "project-reader"
version = "0.0.1"
description = "TOML-kuvausten lukija, ohtun viikon 2 laskareihin"
authors = ["Matti Luukkainen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
Levenshtein = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "coverage"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
